- Added listType 'Addendum' for items of Council (added possibility to define 'items
  without a number' as well)
- Added possibility to manually send items from College to Council once item is 'itemfrozen'
- Restricted power observers may not see 'late' council items if not decided
- Added state 'sent_to_council_emergency' on a College item to make it possible
  to keep a link between a College item and a Council item emergency if the original
  College item was not linked to a meeting
- When a Council item is 'delayed', it is automatically sent back to College in 'itemcreated'
  state to make full validation process again in College to be sent again in Council, finance
  advice does not follow
- When a Council item is 'returned', it is automatically sent back to College in 'validated'
  state to be immediatelly presentable in a next meeting, finance advice does follow
- When a Council item is presented, automatically add the COUNCILITEM_DECISIONEND_SENTENCE at
  the end of the item's decisionEnd if not already
- Make sure a MeetingGroup may not be removed if used in MeetingConfig.archivingRefs or
  MeetingCategory.groupsOfMatter
- Do only let ask advices (by item creator or internal reviewer) if some advices will be giveable in
  the state the item will be (itemcreated_waiting_advices or
  proposed_to_internal_reviewer_waiting_advices)
- When a College item was sent to Council (when it was frozen) and the final decision on the College item
  is "delayed", delete the item that was sent to the Council
- Do every manuallyLinkedItems of an item having finance advice accessible to the finance advisers
- Hide some elements for restricted power observers : some fileters, columns and access to element's history
- Added 'positive_with_remarks_finance' to the list of advice_type selectable by finance advisers,
  this behaves exactly like 'positive_finance' in every cases, except the icon that shows to the user
  that a comment has been added to the advice